@@ -368,14 +368,9 @@ These two pieces of data are used for mapping after the uploads to set what fold
 		<!-- privatefilelist supports 'type'. limit is also available. -->
 		
 		
-		<li><a href='#' onClick="app.model.addDispatchToQ({'_cmd':'adminConfigDetail','flexedit':'1'},'mutable'); app.model.dispatchThis('mutable'); return false;">adminConfigDetail/flexedit</a></li>
-		<li><a href='#' onClick="app.model.addDispatchToQ({'_cmd':'appResource','filename':'product_attribs_popular.json'},'mutable'); app.model.dispatchThis('mutable'); return false;">appResourceGet/flexedit</a></li>
 		
 
 <!--		<li><a href='#' onClick="app.model.addDispatchToQ({'_cmd':'adminPlatformHealth'},'mutable'); app.model.dispatchThis('mutable'); return false;">adminPlatformHealth</a></li> -->
-
-<li><a href='#' onClick="app.model.addDispatchToQ({'_cmd':'adminPlatformLogList'},'mutable'); app.model.dispatchThis('mutable'); return false;">adminPlatformLogList</a></li>
-<li><a href='#' onClick="app.model.addDispatchToQ({'_cmd':'adminPlatformLogDownload','GUID':'@DISKUSAGE'},'mutable'); app.model.dispatchThis('mutable'); return false;">adminPlatformLogDownload</a></li><!-- no base 64 -->
 
 		
 		<li><a href='#' onClick="app.model.addDispatchToQ({'_cmd':'adminConfigDetail','tuning':'1'},'mutable'); app.model.dispatchThis('mutable'); return false;">adminConfigDetail -> tuning</a></li>
